doc: add docs for get org by id
