# docs/swagger/swagger.yaml
@@ -143,6 +143,21 @@ definitions:
       access_token:
         type: string
     type: object
+  OrganizationOutput:
+    properties:
+      active:
+        type: boolean
+      category:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   PermissionOutput:
     properties:
       title:
@@ -403,6 +418,42 @@ paths:
       tags:
       - Organization
   /organization/{organization_id}:
+    get:
+      description: Returns the business details of an organization.
+      parameters:
+      - description: Organization ID
+        in: path
+        name: organization_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/OrganizationOutput'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+      - BearerAuth: []
+      summary: Get organization
+      tags:
+      - Organization
     patch:
       consumes:
       - application/json
